[package]
name = "vrf"
version = "0.3.0"
description = "Fast and extensible Verifiable Random Function (VRF) library. Currently supporting SECP256K1, SECP256R1, SECP384R1 SECP521R1, SECT curves and BRAINPOOL_P256R1, BRAINPOOL_P320R1, BRAINPOOL_P384R1, BRAINPOOL_P512R1 curves."
keywords = ["vrf", "ecfrv", "secp256k1", "secp256r1", "secp384r1", "secp521r1", "p256", "p384", "p521", "brainpool_p256r1", "brainpool_p320r1", "brainpool_p384r1", "brainpool_p512r1"]
categories = ["algorithms", "cryptography"]
license = "MIT"
authors = ["Witnet Foundation <info@witnet.foundation>"]
edition = "2021"
homepage = "https://github.com/witnet/vrf-rs"
documentation = "https://docs.rs/vrf/"
repository = "https://github.com/witnet/vrf-rs"
readme = "README.md"
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "witnet/vrf-rs", branch = "master" }

[dependencies]
thiserror = "2"
openssl = "0.10"
hmac-sha256 = "1.1.2"

[dev-dependencies]
clap = "2.32.0"
hex = "0.4"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = { version = ">=1.0" }

[features]
vendored = ["openssl/vendored"]
